# grade

./: .gitignore  .gitmodules  .mailmap  50trees_clusterization_profile  CMakeLists.txt  GA_function_stats.blk  README.md  benchmark_test.blk  benchmark_test_1.blk  biomes.blk  check_leaks.sh  clustering_defaults.blk  copy_build_shaders.sh  copy_shaders.sh  function_values_stat.blk  ge_gen_param_borders.blk  ge_gen_presets.blk  ge_gen_saved_presets.blk  ge_gen_simplified_param_borders.blk  ge_gen_simplified_presets.blk  ge_gen_simplified_saved_presets.blk  grass_presets.blk  groves.txt  help.txt  how_to_build.txt  how_to_install.md  imgui.ini  main.cap  models.blk  my_gen_presets.blk  my_gen_saved_presets.blk  param_selection_all.sh  param_selection_best.sh  parameter_selection.blk  parameter_selection_reference.blk  parameter_selection_settings.blk  perf.txt  perf_test.sh  presets.txt  profile.txt  (+21 more)
config/: GA_function_stats.blk  UPG_reconstruction_demo_config.blk  backup.blk  benchmark_test_1.blk  biomes.blk  blk_examples.blk  buildings_2_gen_parameters_description.blk  buildings_2_gen_presets.blk  buildings_gen_parameters_description.blk  buildings_gen_presets.blk  clustering_defaults.blk  density_test.blk  diff_gen_scene_parameters_description.blk  diff_optimization_benchmark.blk  diff_optimization_benchmark_2.blk  diff_optimization_buildings.blk  diff_optimization_buildings_2.blk  diff_optimization_buildings_box.blk  diff_optimization_buildings_box_multicam.blk  diff_optimization_cup_multicam.blk  diff_optimization_cup_multicam_2.blk  diff_optimization_cup_multicam_4.blk  diff_optimization_cup_multicam_8.blk  diff_optimization_cup_simple.blk  diff_optimization_cup_simple_2.blk  dishes_gen_parameters_description.blk  dishes_gen_presets.blk  equation_solver_test.blk  ge_gen_presets.blk  ge_gen_saved_presets.blk  ge_gen_simplified_presets.blk  ge_gen_simplified_saved_presets.blk  grass_presets.blk  impostor_size_test.blk  init_scene.blk  leak_test_cmd_pack.blk  models.blk  parameter_selection_reference.blk  parameter_selection_settings.blk  qr_test.blk  (+23 more)
diff_reconstruction/: DR_main.cpp  building_generator.h  building_generator_2.cpp  building_generator_2.h  compare.cpp  compare_utils.cpp  compare_utils.h  cpp_ad_vectors.h  custom_diff_render.cpp  depth_extract_compare.cpp  diff_geometry_generation.cpp  diff_geometry_generation.h  diff_optimization.cpp  diff_optimization.h  diff_render.cpp  differentiable_generators.cpp  differentiable_generators.h  dishes_generator.cpp  enzyme_test.cpp  enzyme_test.h  gpu_diff_render.cpp  gpu_diff_render.h  iou3d.cpp  mitsuba_python_interaction.cpp  obj_utils.cpp  obj_utils.h  python_engine.h  simple_model_utils.cpp  software_render_test_3d.cpp  vectors.h
docs/: comparison.md  textures_processing.md
modules/: diff_render_interface.h
modules/neuralCore/: CMakeLists.txt  dataset.cpp  dataset.h  neural_network.cpp  neural_network.h  neural_network_2.cpp  neural_network_2.h  nn_test.cpp  nn_tests.cpp  nn_tests.h  siren.cpp  siren.h  siren2.cpp  siren2.h  slicer_execute.sh  standalone_tests.cpp  tensor_compiler.cpp  tensor_compiler.h  tensor_processor.cpp  tensor_processor.h  tensor_processor_impl.cpp  tensor_processor_impl.h  tensor_processor_impl_gpu.cpp  tensor_processor_impl_gpu.h  tensor_processor_impl_gpu_ds.cpp  tensor_processor_impl_gpu_init.cpp  tensor_token.cpp  tensors.cpp  tensors.h
modules/neuralCore/direct/: neural_network.cpp  neural_network.h  nnd_tests.cpp  nnd_tests.h  siren.cpp  siren.h  tensors.cpp  tensors.h
modules/neuralCore/include/: TensorProcessorImpl_gpu_ubo.h
modules/neuralCore/shaders_gpu/: build.sh  common_gpu.h  kernel1D_add.comp  kernel1D_copy.comp  kernel1D_cos.comp  kernel1D_dilate.comp  kernel1D_div.comp  kernel1D_equal.comp  kernel1D_exp.comp  kernel1D_fill.comp  kernel1D_flip.comp  kernel1D_get_output.comp  kernel1D_greater.comp  kernel1D_greater_equal.comp  kernel1D_less.comp  kernel1D_less_equal.comp  kernel1D_log.comp  kernel1D_logical_and.comp  kernel1D_logical_or.comp  kernel1D_max.comp  kernel1D_maximum.comp  kernel1D_min.comp  kernel1D_minimum.comp  kernel1D_mul.comp  kernel1D_not.comp  kernel1D_not_equal.comp  kernel1D_osum.comp  kernel1D_pad.comp  kernel1D_pow.comp  kernel1D_set_input.comp  kernel1D_sin.comp  kernel1D_smax_diff.comp  kernel1D_sqrt.comp  kernel1D_sub.comp  kernel1D_sum.comp  kernel1D_urand.comp  kernel1D_where.comp  kernel2D_add.comp  kernel2D_div.comp  kernel2D_equal.comp  (+23 more)
original_trees/: tree_0.bsg
other/: gpu_info.sh  linux_sdl_gl.sup  param_selection_all.sh  perf_test.sh  reiter.sh  sdf_diff_gen_compare_details.sh  sdf_diff_gen_to_compare.sh  textures_processing.md
prezentations/: Makefile  prez.aux  profile  short_prez.aux  short_prez.tex
scripts/: emb_test.py  ft_gpu_test.py  func.py  install_cuda.sh  mitsuba_optimization_embedded.py  moe_experiments.py  neural_selection.py  pca.py  pca_3d.py  train_NN.sh  visualize_manual.ipynb  visualize_opt_stat.py
shaders/: alpha_split_alpha.fs  alpha_split_color.fs  apply_alpha.fs  average_filter.fs  bilateral_filter.fs  billboard_render.fs  billboard_render_instancing.fs  billboard_render_instancing.vs  binarize.fs  blur_mask_edges.fs  body.fs  cells_compute.comp  clear_compute.comp  clear_compute.hlsl  copy.fs  copy.vs  copy_arr.fs  copy_arr.vs  copy_arr2.fs  copy_arr_slice.fs  cubemap.fs  cubemap.vs  debug.fs  debug.vs  default.fs  default.vs  deffered_light.fs  deffered_light_no_shadows.fs  deffered_light_simple_shadows.fs  depth.fs  depth_billboard.fs  depth_billboard_array.fs  depth_merge.fs  depth_postprocess.fs  detect_object.fs  diff_loss.fs  diff_loss_sum.comp  dist_compute.comp  edge_sampling.comp  edges_get_pdf.comp  (+75 more)
src/: GPU_clusterization.cpp  GPU_clusterization.h  abstract_generator.h  app.cpp  app.h  billboard_cloud.cpp  billboard_cloud.h  billboard_cloud_data.h  body.cpp  body.h  branch_clusterization.cpp  branch_clusterization.h  camera.h  cluster.cpp  clustering_benchmark.cpp  clustering_benchmark.h  cmd_buffers.h  cmd_executors.h  commands.h  common_tests.cpp  common_tests.h  compare.cpp  compare.h  (+81 more)
(+895 files in other folders)
